Integrate MCP server with voice agents

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,1 @@
-OPENAI_API_KEY=your_api_key
-NEXT_PUBLIC_MCP_SSE=https://sears-kairos-koyfin-mongo-mcp.ngrok.app/sse
+OPENAI_API_KEY=your_api_keyNEXT_PUBLIC_MCP_SSE=https://kairos-scheduler-mcp.ngrok.app/sse
