--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "openai": "^4.77.3",
+    "viber-bot": "^1.0.18"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0",
-    "@types/express": "^4.17.14"
+    "@types/express": "^4.17.14",
+    "@types/node": "^20.0.0",
+    "@types/cors": "^2.8.18"
   }
 }
