--- a/mcp-server/tsconfig.json
+++ b/mcp-server/tsconfig.json
@@ -5,6 +5,8 @@
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "lib": ["esnext", "dom"],
+    "skipLibCheck": true
   }
 }
